feat(user): 高保真恢复头像框与用户徽章
